Updating Advanced installation steps