@@ -319,7 +319,7 @@ First, it is not recommended to run Apache Tomcat as user root, so we will creat
 
 .. code-block:: shell
 
-  VERSION=9.0.45; wget https://www-eu.apache.org/dist/tomcat/tomcat-9/v${VERSION}/bin/apache-tomcat-${VERSION}.tar.gz
+  VERSION=9.0.48; wget https://www-eu.apache.org/dist/tomcat/tomcat-9/v${VERSION}/bin/apache-tomcat-${VERSION}.tar.gz
 
 
 Once the download is complete, extract the tar file to the /opt/tomcat directory:
@@ -738,37 +738,169 @@ Serving {“geonode”, “geoserver”} via NGINX
   plugins = python3
   virtualenv = /home/<my_user>/.virtualenvs/geonode
 
-  env = DEBUG=False
+  env = DJANGO_SETTINGS_MODULE=geonode.settings
+  env = GEONODE_INSTANCE_NAME=geonode
+  env = GEONODE_LB_HOST_IP=
+  env = GEONODE_LB_PORT=
 
-  env = DJANGO_SETTINGS_MODULE=geonode.local_settings
+  # #################
+  # backend
+  # #################
+  env = POSTGRES_USER=postgres
+  env = POSTGRES_PASSWORD=postgres
+  env = GEONODE_DATABASE=geonode
+  env = GEONODE_DATABASE_PASSWORD=geonode
+  env = GEONODE_GEODATABASE=geonode_data
+  env = GEONODE_GEODATABASE_PASSWORD=geonode
+  env = GEONODE_DATABASE_SCHEMA=public
+  env = GEONODE_GEODATABASE_SCHEMA=public
+  env = DATABASE_HOST=localhost
+  env = DATABASE_PORT=5432
+  env = DATABASE_URL=postgis://geonode:geonode@localhost:5432/geonode
+  env = GEODATABASE_URL=postgis://geonode:geonode@localhost:5432/geonode_data
+  env = GEONODE_DB_CONN_MAX_AGE=0
+  env = GEONODE_DB_CONN_TOUT=5
+  env = DEFAULT_BACKEND_DATASTORE=datastore
+  env = BROKER_URL=amqp://admin:admin@localhost:5672//
+  env = ASYNC_SIGNALS=False
 
-  env = SECRET_KEY='RanD0m%3cr3tK3y'
-
-  env = SITE_HOST_NAME=localhost
   env = SITEURL=http://localhost/
-  env = ALLOWED_HOSTS=['localhost',]
 
-  env = LOCKDOWN_GEONODE=False
-  env = SESSION_EXPIRED_CONTROL_ENABLED=True
+  env = ALLOWED_HOSTS="['*']"
 
-  env = MONITORING_ENABLED=False
+  # Data Uploader
+  env = DEFAULT_BACKEND_UPLOADER=geonode.importer
+  env = TIME_ENABLED=True
+  env = MOSAIC_ENABLED=False
+  env = HAYSTACK_SEARCH=False
+  env = HAYSTACK_ENGINE_URL=http://elasticsearch:9200/
+  env = HAYSTACK_ENGINE_INDEX_NAME=haystack
+  env = HAYSTACK_SEARCH_RESULTS_PER_PAGE=200
 
+  # #################
+  # nginx
+  # HTTPD Server
+  # #################
+  env = GEONODE_LB_HOST_IP=localhost
+  env = GEONODE_LB_PORT=80
+
+  # IP or domain name and port where the server can be reached on HTTPS (leave HOST empty if you want to use HTTP only)
+  # port where the server can be reached on HTTPS
+  env = HTTP_HOST=localhost
+  env = HTTPS_HOST=
+
+  env = HTTP_PORT=8000
+  env = HTTPS_PORT=443
+
+  # #################
+  # geoserver
+  # #################
+  env = GEOSERVER_WEB_UI_LOCATION=http://localhost/geoserver/
+  env = GEOSERVER_PUBLIC_LOCATION=http://localhost/geoserver/
+  env = GEOSERVER_LOCATION=http://localhost:8080/geoserver/
+  env = GEOSERVER_ADMIN_USER=admin
+  env = GEOSERVER_ADMIN_PASSWORD=geoserver
+
+  env = OGC_REQUEST_TIMEOUT=5
+  env = OGC_REQUEST_MAX_RETRIES=1
+  env = OGC_REQUEST_BACKOFF_FACTOR=0.3
+  env = OGC_REQUEST_POOL_MAXSIZE=10
+  env = OGC_REQUEST_POOL_CONNECTIONS=10
+
+  # Java Options & Memory
+  env = ENABLE_JSONP=true
+  env = outFormat=text/javascript
+  env = GEOSERVER_JAVA_OPTS="-Djava.awt.headless=true -Xms2G -Xmx4G -XX:+UnlockDiagnosticVMOptions -XX:+LogVMOutput -XX:LogFile=/var/log/jvm.log -XX:PerfDataSamplingInterval=500 -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:-UseGCOverheadLimit -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:ParallelGCThreads=4 -Dfile.encoding=UTF8 -Djavax.servlet.request.encoding=UTF-8 -Djavax.servlet.response.encoding=UTF-8 -Duser.timezone=GMT -Dorg.geotools.shapefile.datetime=false -DGEOSERVER_CSRF_DISABLED=true -DPRINT_BASE_URL=http://geoserver:8080/geoserver/pdf -DALLOW_ENV_PARAMETRIZATION=true -Xbootclasspath/a:/usr/local/tomcat/webapps/geoserver/WEB-INF/lib/marlin-0.9.3-Unsafe.jar -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine"
+
+  # #################
+  # Security
+  # #################
+  # Admin Settings
   env = ADMIN_USERNAME=admin
   env = ADMIN_PASSWORD=admin
   env = ADMIN_EMAIL=admin@localhost
 
-  env = GEOSERVER_PUBLIC_HOST=localhost
-  env = GEOSERVER_PUBLIC_PORT=
-  env = GEOSERVER_ADMIN_PASSWORD=geoserver
+  # EMAIL Notifications
+  env = EMAIL_ENABLE=False
+  env = DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+  env = DJANGO_EMAIL_HOST=localhost
+  env = DJANGO_EMAIL_PORT=25
+  env = DJANGO_EMAIL_HOST_USER=
+  env = DJANGO_EMAIL_HOST_PASSWORD=
+  env = DJANGO_EMAIL_USE_TLS=False
+  env = DJANGO_EMAIL_USE_SSL=False
+  env = DEFAULT_FROM_EMAIL='GeoNode <no-reply@geonode.org>'
 
-  env = GEOSERVER_LOCATION=http://localhost/geoserver/
-  env = GEOSERVER_PUBLIC_LOCATION=http://localhost/geoserver/
-  env = GEOSERVER_WEB_UI_LOCATION=http://localhost/geoserver/
+  # Session/Access Control
+  env = LOCKDOWN_GEONODE=False
+  env = CORS_ORIGIN_ALLOW_ALL=True
+  env = X_FRAME_OPTIONS="ALLOW-FROM ALL"
+  env = SESSION_EXPIRED_CONTROL_ENABLED=True
+  env = DEFAULT_ANONYMOUS_VIEW_PERMISSION=True
+  env = DEFAULT_ANONYMOUS_DOWNLOAD_PERMISSION=True
 
-  env = OGC_REQUEST_TIMEOUT=60
-  env = OGC_REQUEST_MAX_RETRIES=3
-  env = OGC_REQUEST_POOL_MAXSIZE=100
-  env = OGC_REQUEST_POOL_CONNECTIONS=100
+  # Users Registration
+  env = ACCOUNT_OPEN_SIGNUP=True
+  env = ACCOUNT_EMAIL_REQUIRED=True
+  env = ACCOUNT_APPROVAL_REQUIRED=False
+  env = ACCOUNT_CONFIRM_EMAIL_ON_GET=False
+  env = ACCOUNT_EMAIL_VERIFICATION=none
+  env = ACCOUNT_EMAIL_CONFIRMATION_EMAIL=False
+  env = ACCOUNT_EMAIL_CONFIRMATION_REQUIRED=False
+  env = ACCOUNT_AUTHENTICATION_METHOD=username_email
+  env = AUTO_ASSIGN_REGISTERED_MEMBERS_TO_REGISTERED_MEMBERS_GROUP_NAME=True
+
+  # OAuth2
+  env = OAUTH2_API_KEY=
+  env = OAUTH2_CLIENT_ID=Jrchz2oPY3akmzndmgUTYrs9gczlgoV20YPSvqaV
+  env = OAUTH2_CLIENT_SECRET=rCnp5txobUo83EpQEblM8fVj3QT5zb5qRfxNsuPzCqZaiRyIoxM4jdgMiZKFfePBHYXCLd7B8NlkfDBY9HKeIQPcy5Cp08KQNpRHQbjpLItDHv12GvkSeXp6OxaUETv3
+
+  # GeoNode APIs
+  env = API_LOCKDOWN=False
+  env = TASTYPIE_APIKEY=
+
+  # #################
+  # Production and
+  # Monitoring
+  # #################
+  env = DEBUG=False
+
+  SECRET_KEY='myv-y4#7j-d*p-__@j#*3z@!y24fz8%^z2v6atuy4bo9vqr1_a'
+
+  env = CACHE_BUSTING_STATIC_ENABLED=False
+  env = CACHE_BUSTING_MEDIA_ENABLED=False
+
+  env = MEMCACHED_ENABLED=False
+  env = MEMCACHED_BACKEND=django.core.cache.backends.memcached.MemcachedCache
+  env = MEMCACHED_LOCATION=127.0.0.1:11211
+  env = MEMCACHED_LOCK_EXPIRE=3600
+  env = MEMCACHED_LOCK_TIMEOUT=10
+
+  env = MAX_DOCUMENT_SIZE=2
+  env = CLIENT_RESULTS_LIMIT=5
+  env = API_LIMIT_PER_PAGE=1000
+
+  # GIS Client
+  env = GEONODE_CLIENT_LAYER_PREVIEW_LIBRARY=mapstore
+  env = MAPBOX_ACCESS_TOKEN=
+  env = BING_API_KEY=
+  env = GOOGLE_API_KEY=
+
+  # Monitoring
+  env = MONITORING_ENABLED=True
+  env = MONITORING_DATA_TTL=365
+  env = USER_ANALYTICS_ENABLED=True
+  env = USER_ANALYTICS_GZIP=True
+  env = CENTRALIZED_DASHBOARD_ENABLED=False
+  env = MONITORING_SERVICE_NAME=local-geonode
+  env = MONITORING_HOST_NAME=geonode
+
+  # Other Options/Contribs
+  env = MODIFY_TOPICCATEGORY=True
+  env = AVATAR_GRAVATAR_SSL=True
+  env = EXIF_ENABLED=True
+  env = CREATE_LAYER=True
+  env = FAVORITE_ENABLED=True
 
   logto = /opt/data/logs/geonode.log
   pidfile = /tmp/geonode.pid
@@ -813,15 +945,13 @@ Serving {“geonode”, “geoserver”} via NGINX
   cheaper-busyness-backlog-alert = 16  ; Spawn emergency workers if more than this many requests are waiting in the queue
   cheaper-busyness-backlog-step = 2    ; How many emergency workers to create if there are too many requests in the queue
 
-  # daemonize = /var/log/uwsgi/geonode.log
-  # cron = -1 -1 -1 -1 -1 /usr/local/bin/python /usr/src/{{project_name}}/manage.py collect_metrics -n
-
 .. code-block:: shell
 
   # Enable the GeoNode UWSGI config
   sudo ln -s /etc/uwsgi/apps-available/geonode.ini /etc/uwsgi/apps-enabled/geonode.ini
 
   # Restart UWSGI Service
+  sudo pkill -9 -f uwsgi
   sudo service uwsgi restart
 
 .. code-block:: shell
@@ -992,57 +1122,45 @@ Update the settings in order to use the ``PostgreSQL`` Database
   workon geonode
   cd /opt/geonode
 
-  cp geonode/local_settings.py.geoserver.sample geonode/local_settings.py
-
-  # In case you want to change the DB password, run the following
-  # sudo sed -i -e "s/'PASSWORD': 'geonode',/'PASSWORD': '<your_db_role_password>',/g" geonode/local_settings.py
-
-  # Stop Tomcat
-  sudo service tomcat9 stop
-
   # Initialize GeoNode
-  DJANGO_SETTINGS_MODULE=geonode.local_settings paver reset
-  DJANGO_SETTINGS_MODULE=geonode.local_settings paver setup
-  DJANGO_SETTINGS_MODULE=geonode.local_settings paver sync
-  DJANGO_SETTINGS_MODULE=geonode.local_settings python manage.py collectstatic --noinput
-
-.. note:: By using the ``.env_dev`` instead of ``local_settings.py``, the commands will change like below
-
-    .. code-block:: shell
-
-        ...
-        # Initialize GeoNode
-        ./paver_dev.sh reset
-        ./paver_dev.sh setup
-        ./paver_dev.sh sync
-        ./manage_dev.sh collectstatic --noinput
+  chmod +x *.sh
+  ./paver_local.sh reset
+  ./paver_local.sh setup
+  ./paver_local.sh sync
+  ./manage_local.sh collectstatic --noinput
+  sudo chmod -Rf 777 geonode/static_root/ geonode/uploaded/
 
 Before finalizing the configuration we will need to update the ``UWSGI`` settings
 
-Restart ``UWSGI`` and update ``OAuth2`` by using the new ``geonode.local_settings``
-
-.. warning:: **!IMPORTANT!** In the statement below make sure to use ``DJANGO_SETTINGS_MODULE=geonode.local_settings``
+Restart ``UWSGI`` and update ``OAuth2`` by using the new ``geonode.settings``
 
 .. code-block:: shell
 
+  # As superuser
+  sudo su
+
   # Restart Tomcat
-  sudo service tomcat9 restart
+  service tomcat9 restart
 
   # Restart UWSGI
-  sudo killall /usr/bin/uwsgi
-  sudo service uwsgi start
+  pkill -9 -f uwsgi
+  service uwsgi restart
 
   # Update the GeoNode ip or hostname
   cd /opt/geonode
 
   # This must be done the first time only
-  sudo cp package/support/geonode.binary /usr/bin/geonode
-  sudo cp package/support/geonode.updateip /usr/bin/geonode_updateip
-  sudo chmod +x /usr/bin/geonode
-  sudo chmod +x /usr/bin/geonode_updateip
+  cp package/support/geonode.binary /usr/bin/geonode
+  cp package/support/geonode.updateip /usr/bin/geonode_updateip
+  chmod +x /usr/bin/geonode
+  chmod +x /usr/bin/geonode_updateip
 
   # Refresh GeoNode and GeoServer OAuth2 settings
-  sudo PYTHONWARNINGS=ignore VIRTUAL_ENV=$VIRTUAL_ENV DJANGO_SETTINGS_MODULE=geonode.local_settings GEONODE_ETC=/opt/geonode/geonode GEOSERVER_DATA_DIR=/opt/data/geoserver_data TOMCAT_SERVICE="service tomcat9" APACHE_SERVICE="service nginx" geonode_updateip -p localhost
+  source .env_local
+  PYTHONWARNINGS=ignore VIRTUAL_ENV=$VIRTUAL_ENV DJANGO_SETTINGS_MODULE=geonode.settings GEONODE_ETC=/opt/geonode/geonode GEOSERVER_DATA_DIR=/opt/data/geoserver_data TOMCAT_SERVICE="service tomcat9" APACHE_SERVICE="service nginx" geonode_updateip -p localhost
+
+  # Go back to standard user
+  exit
 
 Check for any error with
 
